--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,6 +2,9 @@ FROM mcr.microsoft.com/devcontainers/python:0-3.11
 
 ENV PYTHONUNBUFFERED 1
 
+#This if for railway deployment only
+WORKDIR /code
+
 # [Optional] If your requirements rarely change, uncomment this section to add them to the image.
 COPY requirements.txt /tmp/pip-tmp/
 RUN pip3 --disable-pip-version-check --no-cache-dir install -r /tmp/pip-tmp/requirements.txt \
@@ -13,5 +16,8 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
 # RUN apt-get update && apt-get upgrade 
 # && sudo apt-get install libsqlite3-dev && sudo apt-get install sqlite3
 
+# Next section is for Railway deployment setup
+COPY ./app /code/app
 
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
 
